# affine-enhanced

./: .dockerignore  .warp.md  Dockerfile  Dockerfile.backend  Dockerfile.backend.fixed  Dockerfile.backend.minimal  Dockerfile.backend.openrouter  Dockerfile.backend.simple  Dockerfile.cloudrun  Dockerfile.frontend  Dockerfile.frontend.localbased  Dockerfile.frontend.nginx  README-meta-prompt.md  app.yaml  cloudbuild-frontend.yaml  cloudbuild.yaml  deploy-gcp.sh  deploy-server.js  docker-compose.openrouter.yml  generated-prompt-1757057403751.json  meta-prompt-cli.js  meta-prompt-schema.json  package-meta-prompt.json  package.json  prompt-test-success.md  pyproject.toml  simple-server.js  test-prompt-command.sh  unified-meta-prompt.md
.github/deployment/front/: affine.nginx.conf
.github/workflows/: cloud-storage-upload.yml  deploy-gcp.yml  deploy.yml  security-analysis-snyk.yml
blocksuite/integration-test/: package.json
blocksuite/playground/: package.json
docs/: DEPLOYMENT.md  OPENROUTER_DEPLOYMENT.md
docs/ci/: artifacts-and-security.md
examples/: ai-agent-example.json
infrastructure/terraform/: main.tf
scripts/: check-input-accessibility.js  setup-gcloud.sh  test-openrouter-models.js
tests/a11y/: form-inputs.spec.ts
